<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/status_bg">

        <include
            layout="@layout/back_sub"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/err_zone"

        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/dark_red">

        <TextView
            android:id="@+id/err_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="17dp"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="17dp"
            tools:text="error" />

        <TextView
            android:id="@+id/err_msg"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:gravity="end|center"
            android:lines="1"
            android:scaleType="center"
            android:textColor="@color/white"
            android:textSize="17dp"
            tools:text="action"

            />


    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray0">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">




                <RelativeLayout
                    android:id="@+id/chenge_angle_zone"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="17dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:text="@string/change_sesame_angle"
                        android:textColor="@color/black"
                        android:textSize="17dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:paddingRight="12dp"
                        android:scaleType="center"
                        android:src="@drawable/ic_arrow_gray" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="17dp"
                        android:background="@color/gray0" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/change_ssm_histag_zone"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:background="@color/white"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:text="History Tag"
                        android:textColor="@color/black"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/histag_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="12dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="17dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="17dp"
                        android:background="@color/gray0" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="17dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:text="@string/autolock"
                        android:textColor="@color/black"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/autolock_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textColor="@color/text_hint"
                        android:textSize="17dp" />

                    <TextView

                        android:id="@+id/second_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="12dp"
                        android:layout_toEndOf="@+id/autolock_status"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:text="@string/second"

                        android:textColor="@color/text_hint"
                        android:textSize="17dp"
                        android:visibility="gone" />

                    <Switch
                        android:id="@+id/autolockSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="12dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="17dp"
                        android:background="@color/gray0" />
                </RelativeLayout>

                <com.weigan.loopview.LoopView
                    android:id="@+id/wheelview"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:focusable="true"
                    android:visibility="gone"

                    app:awv_initialPosition="0"
                    app:awv_textsize="13" />


                <RelativeLayout
                    android:id="@+id/dfu_zone"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="17dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:text="@string/ssm_update"
                        android:textColor="@color/black"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/device_version_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="12dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:textColor="@color/text_hint"
                        android:textSize="17dp"
                        tools:text="1.0.0-aabbcc" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="17dp"
                        android:background="@color/gray0" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/ssmid"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="17dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:text="UUID"
                        android:textColor="@color/black"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/ssmid_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:maxWidth="300dp"
                        android:paddingEnd="12dp"
                        android:scaleType="center"
                        android:singleLine="true"
                        android:textColor="@color/text_hint"
                        tools:text="111111-1234-4321-1234-1234567812345678" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="17dp"
                        android:background="@color/gray0" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/drop_zone"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:text="@string/trash_key"
                        android:textColor="@color/red"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/reset_zone"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:lines="1"
                        android:text="@string/reset_the_sesame"
                        android:textColor="@color/red"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        app:autoSizeTextType="uniform" />
                </RelativeLayout>
            </LinearLayout>

        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>