<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/status_bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray0"
        android:orientation="vertical"
        android:paddingBottom="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
           >

            <include
                layout="@layout/back_sub"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/err_zone"

                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="@color/dark_red">

                <TextView
                    android:id="@+id/err_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="17dp"
                    android:gravity="center_vertical"
                    tools:text="error"
                    android:textColor="@color/white"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/err_msg"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:gravity="end|center"
                    android:lines="1"
                    android:scaleType="center"
                    android:textColor="@color/white"
                    android:textSize="17dp"
                    tools:text="action"

                    />


            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/dfu_zone"

                android:layout_width="match_parent"
                android:layout_height="53dp"

                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/ssm_update"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/device_version_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:textColor="@color/text_hint"
                    tools:text="1.0.1"

                    android:paddingRight="12dp"
                    android:scaleType="center" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="16dp"
                    android:background="@color/gray0" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="53dp"

                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:text="UUID"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/device_uuid_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:textColor="@color/text_hint"
                    tools:text="1111-1111"
                    android:paddingRight="12dp"
                    android:scaleType="center" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="16dp"
                    android:background="@color/gray0" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/drop_zone"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="8dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/trash_key"
                    android:textColor="@color/red"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/reset_zone"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="8dp"
                android:background="@color/white">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/reset_the_sesame"
                    android:textColor="@color/red"
                    android:textSize="17sp"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:autoSizeTextType="uniform"
                    android:lines="1"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
